--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
-	"private": true,
 	"scripts": {
-		"start": "wmr",
-		"build": "wmr build --prerender",
-		"serve": "wmr serve",
-		"esserve": "esbuild --bundle --serve --servedir=public --outdir=public/dist public/index.tsx"
-	},
-	"eslintConfig": {
-		"extends": "preact"
+		"start": "bash start.sh",
+		"build": "bash build.sh",
 	},
 	"dependencies": {
-		"@types/lodash": "^4.14.173",
-		"@types/react": "^17.0.21",
-		"@types/react-dom": "^17.0.9",
-		"esbuild": "^0.9.7",
 		"lodash": "^4.17.21",
-		"preact": "^10.5.14",
-		"preact-iso": "^2.2.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-spring": "^9.2.4"
 	},
 	"devDependencies": {
-		"wmr": "^3.7.1"
+		"@types/lodash": "^4.14.173",
+		"@types/react": "^17.0.21",
+		"@types/react-dom": "^17.0.9",
+		"esbuild": "^0.9.7",
 	}
 }
